@@ -5,15 +5,14 @@
         "name": "host.example.com"
     },
     "http": {
-        "testnamespace": {
+        "json": {
             "hello": "world"
         }
     },
     "metricset": {
-        "host": "http:8080",
+        "host": "127.0.0.1:8080",
         "module": "http",
         "name": "json",
-        "namespace": "testnamespace",
         "rtt": 115
     }
 }
